Finish nonscrollableElement, move faq/schedule

--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@
 
                 <div id="schedule">
                     <h1>Schedule</h1>
-                    <button class="scheduleButton" data-bs-toggle="modal" data-bs-target="#scheduleModal">View the Schedule</button>
+                    <div class="nonScrollableElement">
+                        <p>Schedule coming soon!</p>
+                    </div>
                 </div>
 
                 <div id="members">
@@ -266,21 +268,6 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
-        
-        <!-- Modal window for schedule -->
-        <div class="modal fade " id="scheduleModal" tabindex="-1">
-            <div class="modal-dialog ">
-            <div class="modal-content">
-                <div class="modal-header">
-                    Schedule
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <p>Schedule coming soon!</p>
-                </div>
-            </div>
             </div>
         </div>
 
