--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                                 <button class="faqButton" data-bs-toggle="modal" href="" data-bs-target="#faqModal4">What does the application process and timeline look like?</button>
                             </li>
                             <li>
-                                <button class="faqButton" data-bs-toggle="modal" href="" data-bs-target="#faqModal5">Is Hacks only for undergraduate students??</button>
+                                <button class="faqButton" data-bs-toggle="modal" href="" data-bs-target="#faqModal5">Is Hacks only for undergraduate students?</button>
                             </li>
                             <li>
                                 <button class="faqButton" data-bs-toggle="modal" href="" data-bs-target="#faqModal6">What can I make and who can I work with?</button>
