Fix class name & event handler

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     </div>
                 <div id="faq">
                     <h1>FAQ</h1>
-                    <div class="nonScrollableElement">
+                    <div class="verticalScrollElement">
                         <ul>
                             <li>
                                 <button class="faqButton" data-bs-toggle="modal" href="" data-bs-target="#faqModal1">What's a hackathon?</button>
@@ -87,7 +87,7 @@
 
                 <div id="schedule">
                     <h1>Schedule</h1>
-                    <div class="nonScrollableElement">
+                    <div class="verticalScrollElement">
                         <p>Schedule coming soon!</p>
                     </div>
                 </div>
