--- a/index.html
+++ b/index.html
@@ -88,7 +88,32 @@
                 <div id="schedule">
                     <h1>Schedule</h1>
                     <div class="verticalScrollElement">
-                        <p>Schedule coming soon!</p>
+                        <ul>
+                            <ul>
+                                <li><em>3/24 Friday Workshop night</em></li>
+                                <li>6:00 Workshop 1/2</li>
+                                <li>7:00 Workshop 3/4</li>
+                            </ul>
+                            <ul>
+                                <li><em>3/25 Day 1</em></li>
+                                <li>9:00 Doors open, check-in, team formation, breakfast</li>
+                                <li>10:00 Opening ceremony</li>
+                                <li>10:30 Hacking begins</li>
+                                <li>12:00 Lunch</li>
+                                <li>6:00 Dinner</li>
+                                <li>9:00 Mad Hatter tea party and costume contest</li>
+                                <li>10:00-12:00 "Follow the white rabbit" scavenger hunt</li>
+                            </ul>
+                            <ul>
+                                <li><em>3/26 Day 2</em></li>
+                                <li>12:00 Midnight snack</li>
+                                <li>8:00 Morning meditation</li>
+                                <li>9:00 Breakfast</li>
+                                <li>10:00 Projects due, project fair</li>
+                                <li>11:00 Judge deliberation</li>
+                                <li>12:00 Awards, closing ceremony</li>
+                            </ul>
+                        </ul>
                     </div>
                 </div>
 
