Add vertical scroll box

--- a/index.html
+++ b/index.html
@@ -28,18 +28,20 @@
                 <div id="runner"><img id="alice" src="https://cdna.artstation.com/p/assets/images/images/018/109/562/original/ha-trang-nguyen-runcycle.gif?1558393201"></div>
                 <div id="title"></div>
                 <div id="about" >
-                        <h1>About</h1>
-                       <p>
-                        Welcome to Uncommon Hacks, the official hackathon of the University of Chicago! 
-                        Spend 24 hours working on a project and meeting cool people in this one-of-a-kind experience!
-                        In our 2023 edition of Hacks, we're excited to bring you the biggest event since the pandemic,
-                        including the overnight component that makes for a truly unforgettable experience.
-                        
-                        Although Hacks will have prizes, we place more emphasis on learning and collaboration than some kind of competitive aspect.
-                        So even if you've never coded before, please do sign up! A successful Hacks team needs people with different skill sets,
-                        and if you would like to learn how to code, we'll have workshops to help you do so.
+                    <h1>About</h1>
+                    <div class="verticalScrollElement">
+                        <p>
+                            Welcome to Uncommon Hacks, the official hackathon of the University of Chicago! 
+                            Spend 24 hours working on a project and meeting cool people in this one-of-a-kind experience!
+                            In our 2023 edition of Hacks, we're excited to bring you the biggest event since the pandemic,
+                            including the overnight component that makes for a truly unforgettable experience.
+                            
+                            Although Hacks will have prizes, we place more emphasis on learning and collaboration than some kind of competitive aspect.
+                            So even if you've never coded before, please do sign up! A successful Hacks team needs people with different skill sets,
+                            and if you would like to learn how to code, we'll have workshops to help you do so.
                         </p>
                     </div>
+                </div>
                 <div id="faq">
                     <h1>FAQ</h1>
                     <div class="verticalScrollElement">
