Alice is transparent now

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <p onclick="smoothScroll('sponsor')">Sponsor</p>  
                     <p onclick="smoothScroll('socials')">Socials</p>  
                 </div>
-                <div id="runner"><img id="alice" src="https://cdna.artstation.com/p/assets/images/images/018/109/562/original/ha-trang-nguyen-runcycle.gif?1558393201"></div>
+                <div id="runner"><img id="alice" src="images/running_alice.gif"></div>
                 <div id="title"></div>
                 <div id="about" >
                     <h1>About</h1>
