working on socials

--- a/index.html
+++ b/index.html
@@ -131,7 +131,16 @@
                 
                 <div id="socials">
                     <h1>Socials</h1>
-                    <img src="https://i.guim.co.uk/img/media/e5615baded59d4a97c7cf68c4f77609dc1f98df7/0_200_3000_1800/master/3000.jpg?width=700&quality=45&dpr=2&s=none">
+
+                    <button class="btn email" onclick="location.href='mailto:celery@uncommonhacks.com?Subject=Uncommon%Hacks%2021%Inquiry';"></button>
+
+                    <button class="btn facebook" onclick="location.href='https://www.facebook.com/uncommonhacks';"></button>
+
+                    <button class="btn instagram" onclick="location.href='https://www.instagram.com/uncommonhacks/';"></button>
+
+                    <button class="btn linkedin" onclick="location.href='https://www.linkedin.com/company/uncommonhacks/';"></button>
+
+                    <button class="btn twitter" onclick="location.href='https://twitter.com/uncommonhacks';"></button>
                 </div>
 
             </div>
