ig this is what the people want

--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
             <!-- Then in css/styles.css, add absolute positioning (see #faq or #schedule as examples) -->
             <div class="overImage">
                 <div id="nav">
-                    <p onclick="smoothScroll('title')">Home</p>
+                    <!-- <p onclick="smoothScroll('title')">Home</p> -->
                     <p onclick="smoothScroll('about')">About</p>     
                     <p onclick="smoothScroll('faq')">FAQ</p>
                     <p onclick="smoothScroll('schedule')">Schedule</p>
-                    <p onclick="smoothScroll('members')">Members</p>  
-                    <p onclick="smoothScroll('sponsor')">Sponsor</p>  
-                    <p onclick="smoothScroll('socials')">Socials</p>  
+                    <!-- <p onclick="smoothScroll('members')">Members</p>  
+                    <p onclick="smoothScroll('sponsor')">Sponsor</p> -->
+                    <p onclick="smoothScroll('socials')">Socials</p> 
+                    <p onclick="smoothScroll('register')">Register</p>
                 </div>
                 <div id="runner"><img id="alice" src="images/running_alice.gif"></div>
                 <div id="title"></div>
@@ -119,7 +120,7 @@
                     </div>
                 </div>
 
-                <div id="members">
+                <!-- <div id="members">
                     <h1>Members</h1>
                     <img src="https://img.freepik.com/free-photo/clueless-bearded-man-shrugs-shoulders-looks-puzzled-unaware-say-i-dont-understand_273609-52498.jpg?size=626&ext=jpg&ga=GA1.2.1996720489.1676951264&semt=ais">
                 </div>
@@ -127,7 +128,7 @@
                 <div id="sponsor">
                     <h1>Sponsor</h1>
                     <img src="https://d3qi0qp55mx5f5.cloudfront.net/beijing/i/basic_pages_large_images/Capture_(1).JPG?mtime=1573029069">
-                </div>
+                </div> -->
                 
                 <div id="socials">
                     <h1>Socials</h1>
@@ -141,6 +142,10 @@
                     <button class="btn linkedin" onclick="location.href='https://www.linkedin.com/company/uncommonhacks/';"></button>
 
                     <button class="btn twitter" onclick="location.href='https://twitter.com/uncommonhacks';"></button>
+
+                    <div id="register">
+                        <button class="button button1" onclick="location.href='https://uncommonhacks.com/';"><b>Register Now!</b></button>
+                    </div>
                 </div>
 
             </div>
