Set register button link to the typeform

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     <button class="btn twitter" onclick="location.href='https://twitter.com/uncommonhacks';"></button>
 
                     <div id="register">
-                        <button class="button button1" onclick="location.href='https://uncommonhacks.com/';"><b>Register Now!</b></button>
+                        <button class="button button1" onclick="location.href='https://form.typeform.com/to/CS6gyJjX';"><b>Register Now!</b></button>
                     </div>
                 </div>
 
