Background image changes

--- a/index.html
+++ b/index.html
@@ -27,16 +27,18 @@
                     <p onclick="smoothScroll('register')">Register</p>
                 </div>
                 <div id="runner"><img id="alice" src="images/running_alice.gif"></div>
-                <div id="title"></div>
+                <div id="title">
+                    <h1 class="main-header">uNCOmMon<br>HacKS</h1>
+                </div>
                 <div id="about" >
-                    <h1>About</h1>
                     <div class="verticalScrollElement">
-                        <p>
+                        <p class="left">
                             Welcome to Uncommon Hacks, the official hackathon of the University of Chicago! 
                             Spend 24 hours working on a project and meeting cool people in this one-of-a-kind experience!
                             In our 2023 edition of Hacks, we're excited to bring you the biggest event since the pandemic,
-                            including the overnight component that makes for a truly unforgettable experience.
-                            
+                            including the overnight component that makes for a truly unforgettable experience.                            
+                        </p>
+                        <p class="right">
                             Although Hacks will have prizes, we place more emphasis on learning and collaboration than some kind of competitive aspect.
                             So even if you've never coded before, please do sign up! A successful Hacks team needs people with different skill sets,
                             and if you would like to learn how to code, we'll have workshops to help you do so.
