--- a/index.html
+++ b/index.html
@@ -150,6 +150,17 @@
                     </div>
                 </div>
 
+                <div class="team">
+                    <div class="section_heading">Team</div>
+                    <div id="meetTeam">
+                      <span > Meet the team behind Uncommon Hacks 2023 </span><a href="https://team.uncommonhacks.com/">here</a>
+                    </div>
+                    <br/>
+                    <div >
+                      <img id="headshots" class="headshots" src="images/member_photos/Chang_Formal - Eric Chang.jpg"/>
+                    </div>
+                  </div>
+
             </div>
         </div>
 
