--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                     <p onclick="smoothScroll('about')">About</p>     
                     <p onclick="smoothScroll('faq')">FAQ</p>
                     <p onclick="smoothScroll('schedule')">Schedule</p>
-                    <!-- <p onclick="smoothScroll('members')">Members</p>  
-                    <p onclick="smoothScroll('sponsor')">Sponsor</p> -->
+                    <p onclick="smoothScroll('team')">Team</p>  
+                    <p onclick="smoothScroll('sponsor')">Sponsor</p>
                     <p onclick="smoothScroll('socials')">Socials</p> 
                     <p onclick="smoothScroll('register')">Register</p>
                 </div>
@@ -122,16 +122,17 @@
                     </div>
                 </div>
 
-                <!-- <div id="members">
-                    <h1>Members</h1>
-                    <img src="https://img.freepik.com/free-photo/clueless-bearded-man-shrugs-shoulders-looks-puzzled-unaware-say-i-dont-understand_273609-52498.jpg?size=626&ext=jpg&ga=GA1.2.1996720489.1676951264&semt=ais">
+                <div id="team">
+                    <h1>Team</h1>
+                    <img id="headshots" class="headshots" src="images/member_photos/Chang_Formal - Eric Chang.jpg"/>
+                    <p> Meet the team behind Uncommon Hacks 2023 <a href="https://team.uncommonhacks.com/">here</a>!</p>
                 </div>
 
                 <div id="sponsor">
-                    <h1>Sponsor</h1>
-                    <img src="https://d3qi0qp55mx5f5.cloudfront.net/beijing/i/basic_pages_large_images/Capture_(1).JPG?mtime=1573029069">
-                </div> -->
-                
+                    <h1>Sponsors</h1>
+                    <a href="https://sites.google.com/uchicago.edu/teaclub/home" target="_blank"><img src="images/teaclub.png"></a>
+                </div> 
+
                 <div id="socials">
                     <h1>Socials</h1>
 
@@ -148,12 +149,6 @@
                     <div id="register">
                         <button class="button button1" onclick="location.href='https://form.typeform.com/to/CS6gyJjX';"><b>Register Now!</b></button>
                     </div>
-                </div>
-
-                <div id="team">
-                    <h1>Team</h1>
-                    <img id="headshots" class="headshots" src="images/member_photos/Chang_Formal - Eric Chang.jpg"/>
-                    <p> Meet the team behind Uncommon Hacks 2023 <a href="https://team.uncommonhacks.com/">here</a>!</p>
                 </div>
 
             </div>
