--- a/index.html
+++ b/index.html
@@ -96,27 +96,30 @@
                         <ul>
                             <ul>
                                 <li><em>3/24 Friday Workshop night</em></li>
-                                <li>6:00 Workshop 1/2</li>
-                                <li>7:00 Workshop 3/4</li>
+                                <li><b>6:00-8:00 PM</b> Game development with Python and Pyxel</li>
+                                <li><b>7:00-9:00 PM</b> Web development with React and Typescript</li>
                             </ul>
                             <ul>
                                 <li><em>3/25 Day 1</em></li>
-                                <li>9:00 Doors open, check-in, team formation, breakfast</li>
-                                <li>10:00 Opening ceremony</li>
-                                <li>10:30 Hacking begins</li>
-                                <li>12:00 Lunch</li>
-                                <li>6:00 Dinner</li>
-                                <li>9:00 Mad Hatter tea party and costume contest</li>
-                                <li>10:00-12:00 "Follow the white rabbit" scavenger hunt</li>
+                                <li><b>9:00 AM</b> Doors open</li>
+                                <li><b>10:00 AM</b> Opening ceremony</li>
+                                <li><b>10:30 AM</b> Hacking begins</li>
+                                <li><b>12:00 PM</b> Lunch</li>
+                                <li><b>1:00 PM</b> Workshop: Vim: Ya Gotta Know it</li>
+                                <li><b>2:00 PM</b> Activity: "The Caterpillar" (TypeRacer Showdown)</li>
+                                <li><b>4:00 PM</b> Activity: "RRT" (Robot Rumble Tournament)</li>
+                                <li><b>6:00 PM</b> Dinner</li>
+                                <li><b>8:00 PM</b> Activity: "TTT" (Tank Trouble Tournament)</li>
+                                <li><b>10:30 PM</b> PREMIER ACTIVITY: "Sydney in Wonderland: A Generative-AI Theater Challenge"</li>
+                                <li><b>11:59 PM</b> Mad Hatter's Tea Party (Insomnia Cookies and Tea)/Play Performances</li>
                             </ul>
                             <ul>
                                 <li><em>3/26 Day 2</em></li>
-                                <li>12:00 Midnight snack</li>
-                                <li>8:00 Morning meditation</li>
-                                <li>9:00 Breakfast</li>
-                                <li>10:00 Projects due, project fair</li>
-                                <li>11:00 Judge deliberation</li>
-                                <li>12:00 Awards, closing ceremony</li>
+                                <li><b>8:00 AM</b> Workshop: "I Give Myself Very Good Advice" (Meditation Primer)</li>
+                                <li><b>9:00 AM</b> Breakfast</li>
+                                <li><b>10:00 AM</b> Projects due, project fair</li>
+                                <li><b>11:00 AM</b> Judge deliberation</li>
+                                <li><b>12:00 PM</b> Awards, closing ceremony</li>
                             </ul>
                         </ul>
                     </div>
